[not part of build] Fix for bug 125129. Increase buffer size for conversion of status strings from unicode to UTF-8 before passing them on to the browser. r=sdagley, sr=beard.